app/app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-test
  namespace: app
spec:
  selector:
    app: app-test
  ports:
    - name: http
      port: 80
      targetPort: 3000
  type: ClusterIP
